# rsgame

./: CMakeLists.txt  COPYRIGHT  README  netproto.txt
assets/: flat.frag  flat.vert  player.frag  player.vert  terrain.frag  terrain.vert
extlib/: .gitignore  INSTALL-WIN32  build-epoxy.cmd  build-libpng.cmd  build-sdl2-static.cmd  build-sdl2.cmd  build-zlib.cmd  bundle.py  copy-deps.cmd  epoxy-config.cmake  png-config.cmake  sdl2-config.cmake  zlib-config.cmake
extlib/static/: epoxy-config.cmake  png-config.cmake  sdl2-config.cmake  zlib-config.cmake
src/: common.hh  glutil.cc  glutil.hh  level.cc  level.hh  main.cc  maind.cc  net.hh  raycast.cc  raycast.hh  render.cc  render.hh  resource.rc  tile.cc  tile.hh  util.cc  util.hh
